@@ -144,15 +144,23 @@
 			(let* ((key (first k))
 			       (modifiers (second k))
 			       (keycode (typecase key
-					  (character (char->keycode key))
+					  (character (multiple-value-list (char->keycode key)))
 					  (number key)
 					  (string (let* ((keysym (keysym-name->keysym key))
-							 (ret-keycode (xlib:keysym->keycodes *display* keysym)))
-						    (when (/= keysym (xlib:keycode->keysym *display* ret-keycode 0))
-						      (setf modifiers (add-in-state modifiers :shift)))
+							 (ret-keycode (multiple-value-list (xlib:keysym->keycodes *display* keysym))))
+						    (let ((found nil))
+						      (dolist (kc ret-keycode)
+							(when (= keysym (xlib:keycode->keysym *display* kc 0))
+							  (setf found t)))
+						      (unless found
+							(setf modifiers (add-in-state modifiers :shift))))
 						    ret-keycode)))))
+			  (dbg key modifiers keycode)
 			  (if keycode
-			      (,function *root* keycode :modifiers modifiers)
+			      (if (consp keycode)
+				  (dolist (kc (remove-duplicates keycode))
+				    (,function *root* kc :modifiers modifiers))
+				  (,function *root* keycode :modifiers modifiers))
 			      (format t "~&Grabbing error: Can't find key '~A'~%" key)))
 		      (error (c)
 			;;(declare (ignore c))
